kubernetes/infrastructure/base/rustfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-lb
  namespace: rustfs
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rustfs
    app.kubernetes.io/instance: rustfs
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
  loadBalancerIP: 10.10.10.6
