kubernetes/infrastructure/base/rustfs/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs
spec:
  ingressClassName: traefik
  rules:
    - host: s3.theblacklodge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 9000
    - host: rustfs.theblacklodge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 9001
